nginx finally configured | authz-service fixed + new features